--- a/InstaCloneFirebase/InstaCloneFirebase/Base.lproj/Main.storyboard
+++ b/InstaCloneFirebase/InstaCloneFirebase/Base.lproj/Main.storyboard
@@ -158,6 +158,15 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1G-XQ-H7D">
+                                                    <rect key="frame" x="20" y="404" width="353" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="XET-KB-nB4"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4RX-CU-jZq">
                                                     <rect key="frame" x="323" y="450" width="50" height="33"/>
                                                     <constraints>
@@ -177,12 +186,9 @@
                                                         <action selector="likeAction:" destination="BMG-Qg-4tj" eventType="touchUpInside" id="N0f-Wg-0RE"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1G-XQ-H7D">
-                                                    <rect key="frame" x="20" y="404" width="353" height="45"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="45" id="XET-KB-nB4"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="firebaseID" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uqe-Dn-2pm">
+                                                    <rect key="frame" x="315.33333333333331" y="26" width="57.666666666666686" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -195,6 +201,8 @@
                                                 <constraint firstItem="k1G-XQ-H7D" firstAttribute="top" secondItem="qY9-z2-ddr" secondAttribute="bottom" constant="8" id="Gyq-yC-qwv"/>
                                                 <constraint firstItem="VHE-7q-agN" firstAttribute="top" secondItem="k1G-XQ-H7D" secondAttribute="bottom" constant="2" id="M3X-cu-xac"/>
                                                 <constraint firstItem="4RX-CU-jZq" firstAttribute="top" secondItem="k1G-XQ-H7D" secondAttribute="bottom" constant="1" id="SrB-uy-qno"/>
+                                                <constraint firstItem="OzX-ES-gBj" firstAttribute="trailing" secondItem="Uqe-Dn-2pm" secondAttribute="trailing" id="UQJ-DV-Ub2"/>
+                                                <constraint firstItem="OzX-ES-gBj" firstAttribute="centerY" secondItem="Uqe-Dn-2pm" secondAttribute="centerY" id="Xqx-dz-tiJ"/>
                                                 <constraint firstItem="qY9-z2-ddr" firstAttribute="trailing" secondItem="k1G-XQ-H7D" secondAttribute="trailing" id="dIG-BR-Ck5"/>
                                                 <constraint firstItem="k1G-XQ-H7D" firstAttribute="trailing" secondItem="4RX-CU-jZq" secondAttribute="trailing" id="gGd-ZY-I4H"/>
                                                 <constraint firstItem="qY9-z2-ddr" firstAttribute="leading" secondItem="k1G-XQ-H7D" secondAttribute="leading" id="qnU-ZS-63m"/>
@@ -207,6 +215,7 @@
                                         <connections>
                                             <outlet property="commentLabel" destination="k1G-XQ-H7D" id="nQc-Rm-OEW"/>
                                             <outlet property="likeLabel" destination="4RX-CU-jZq" id="eQQ-eM-HNS"/>
+                                            <outlet property="postId" destination="Uqe-Dn-2pm" id="eVL-9V-LcM"/>
                                             <outlet property="userEmailLabel" destination="OzX-ES-gBj" id="fFI-Xw-5bG"/>
                                             <outlet property="userImageView" destination="qY9-z2-ddr" id="v5F-Le-bsN"/>
                                         </connections>
